<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp"
    android:theme="@style/kanetik_feedback_theme"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.kanetik.feedback.presentation.FeedbackActivity"
    tools:showIn="@layout/kanetik_feedback_activity_feedback">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kanetik_feedback_feedback_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kanetik_feedback_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kanetik_feedback_feedback_hint"
            android:inputType="textMultiLine|textCapSentences"
            android:maxLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/kanetik_feedback_email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kanetik_feedback_feedback_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/kanetik_feedback_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/kanetik_feedback_email_address_hint"
            android:inputType="text|textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/kanetik_feedback_additional_data_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/kanetik_feedback_extra_data_description"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kanetik_feedback_email_layout" />

    <TextView
        android:id="@+id/kanetik_feedback_powered_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:gravity="center_vertical"
        android:text="@string/kanetik_feedback_powered_by"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/kanetik_feedback_view_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:layout_marginTop="12dp"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/kanetik_feedback_extra_data_description_clickable"
        android:textAllCaps="true"
        android:textColor="?attr/colorAccent"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kanetik_feedback_additional_data_description" />

</androidx.constraintlayout.widget.ConstraintLayout>
